<properties>
    <maven.compiler.release>21</maven.compiler.release>
</properties>

<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <compilerArgs>
                    <arg>--enable-preview</arg>
                </compilerArgs>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <configuration>
                <systemProperties>
                    <property>
                        <key>java.library.path</key>
                        <value>${project.basedir}/native</value>
                    </property>
                </systemProperties>
                <commandlineArgs>--enable-preview --enable-native-access=ALL-UNNAMED</commandlineArgs>
            </configuration>
        </plugin>
    </plugins>
</build>